--- a/_notebooks/2021-07-19-ch2-array-of-sequences.ipynb
+++ b/_notebooks/2021-07-19-ch2-array-of-sequences.ipynb
@@ -226,27 +226,46 @@
     "\n",
     "### Tuples as Records\n",
     "\n",
-    "tuples hold record, each item in the tuple holds data for one field and the position of the item gives its meaning."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "tuples hold record, each item in the tuple holds data for one field and the position of the item gives its meaning. They work as good record because we can easily upack them in order. \n",
     "using * to grab excess items"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-a436b2c917d4>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-a436b2c917d4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    one, two, *rest = range(1, 10)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BRA/CE342567\n",
+      "ESP/XDA205856\n",
+      "USA/31195855\n"
+     ]
+    }
+   ],
+   "source": [
+    "# here we have a list of travelers with their country and passport number\n",
+    "traveler_ids = [('USA', '31195855'), ('BRA', 'CE342567'), \n",
+    "                ('ESP', 'XDA205856')]\n",
+    "\n",
+    "\n",
+    "for country, passport in sorted(traveler_ids):\n",
+    "    print('%s/%s' % (country, passport))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "[3, 4, 5, 6, 7, 8, 9]\n"
      ]
     }
    ],
@@ -260,12 +279,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Names tuples*** function is a factory that produces a subclass of tuples that attaches field names and class names to it.\n"
+    "Tuple unpacking does work with any interable object, you only have to ensure that when unpacking you map each individual item to 1 corresponding variable (except when the variable has a * operator like in the above example\n",
+    "\n",
+    "nested tuples are also handled just like you would expect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                |   lat.    |   long.  \n",
+      "Mexico City     |   19.4333 |  -99.1333\n",
+      "New York-Newark |   40.8086 |  -74.0204\n",
+      "Sao Paulo       |  -23.5478 |  -46.6358\n"
+     ]
+    }
+   ],
+   "source": [
+    "metro_areas = [\n",
+    "    ('Tokyo', 'JP', 36.933, (35.689722, 139.691667)), #\n",
+    "    ('Delhi NCR', 'IN', 21.935, (28.613889, 77.208889)),\n",
+    "    ('Mexico City', 'MX', 20.142, (19.433333, -99.133333)),\n",
+    "    ('New York-Newark', 'US', 20.104, (40.808611, -74.020386)),\n",
+    "    ('Sao Paulo', 'BR', 19.649, (-23.547778, -46.635833)),\n",
+    "]\n",
+    "\n",
+    "print('{:15} | {:^9} | {:^9}'.format('', 'lat.' , 'long.'))\n",
+    "fmt = '{:15} | {:9.4f} | {:9.4f}'\n",
+    "\n",
+    "for name, cc, population, (lat, long) in metro_areas:\n",
+    "    if long <= 0:\n",
+    "        print(fmt.format(name, lat, long))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Named Tuples\n",
+    "\n",
+    "Names tuples function is a factory that produces a subclass of tuples that attaches field names and class names to it. They also use the same amt of memory as a tuple but less that an object would because it doesn't have a `__dict__`. This makes it ideal for used where you want an object to contain all the data that is associated with it but doesn't have function of its own\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`namedtuple( <class name> , < field names: Optional(iter, str)> )`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City(city='Kochi', state='Kerala', country='India')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import namedtuple\n",
+    "\n",
+    "City = namedtuple('City', 'city state country')\n",
+    "Kochi = City('Kochi', 'Kerala', 'India')\n",
+    "Kochi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +368,7 @@
        "City(name='Tokyo', county='JP', population=36.933, coordinates=(35.689722, 139.691667))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -300,12 +394,13 @@
        "36.933"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# you can also access attributes\n",
     "tokyo.population"
    ]
   },
@@ -313,12 +408,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NamedTuple has a few attributes in addition to the ones in tuple. they are *_fields*, *_make(iterable)*, *_asdict()*"
+    "NamedTuple has a few attributes in addition to the ones in tuple. the most useful ones are `_fields, _make(iterable), _asdict()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -326,24 +421,27 @@
      "output_type": "stream",
      "text": [
       "('name', 'county', 'population', 'coordinates')\n",
-      "OrderedDict([('name', 'Tokyo'), ('county', 'JP'), ('population', 36.933), ('coordinates', (35.689722, 139.691667))])\n",
+      "{'name': 'Tokyo', 'county': 'JP', 'population': 36.933, 'coordinates': (35.689722, 139.691667)}\n",
       "City(name='Delhi NCR', county='IN', population=21.935, coordinates=LatLong(lat=28.613889, long=77.208889))\n"
      ]
     }
    ],
    "source": [
-    "print(City._fields)\n",
+    "print(City._fields) # gets the field names\n",
     "print(tokyo._asdict())\n",
     "LatLong = namedtuple('LatLong', 'lat long')\n",
     "delhi_data = ('Delhi NCR', 'IN', 21.935, LatLong(28.613889, 77.208889))\n",
-    "print(City._make(delhi_data))"
+    "print(City._make(delhi_data)) # allows you to init a named tuple from a \n",
+    "                              # iterable; City(*delhi_data) would do the same"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slicing"
+    "## Slicing\n",
+    "\n",
+    "This is pretty straight forward."
    ]
   },
   {
