slices and concating seq

--- a/_notebooks/2021-07-19-ch2-array-of-sequences.ipynb
+++ b/_notebooks/2021-07-19-ch2-array-of-sequences.ipynb
@@ -441,57 +441,13 @@
    "source": [
     "## Slicing\n",
     "\n",
-    "This is pretty straight forward."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'eccb'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "strs = 'bicycle'\n",
-    "strs[::-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bye'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "strs[::3]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Internally [a:b:c] creates a slice object slice(a, b, c) which is invoked by the `obj.__getitem__(slice(start, stop, step))`\n",
+    "This is pretty straight forward but none the less very powerful. Lets see all their advanced usecases here.\n",
     "\n",
-    "You can also assign to slices."
+    "### Why Slices and Range exclude the last item?\n",
+    "This is because that way its more intutive for zero-based indexing used in python and c.\n",
+    "\n",
+    "### Slice Objects\n",
+    "How slice is works"
    ]
   },
   {
@@ -502,10 +458,79 @@
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+       "('elcycib', 'bye', 'eccb')"
       ]
      },
      "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# slice notation: [start:end:stride]\n",
+    "strs = 'bicycle'\n",
+    "strs[::-1], strs[::3], strs[::-2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Internally [a:b:c] creates a slice object slice(a, b, c) which is invoked by the `obj.__getitem__(slice(start, stop, step))`. This is handy since you can now get `slice` working your own objects.\n",
+    "\n",
+    "You can also assign to slices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'elcycib'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# instead of hardcoding slices, you can name commonly used slices\n",
+    "reverse = slice(None, None, -1)\n",
+    "strs[reverse]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multidimensional Slicing and Ellipsis\n",
+    "\n",
+    "the `[]` operator can also take multiple indexes or slices seperated by commas. This is used, for instance, in the external NumPy package, where items of a two-dimensional numpy.ndarray can be fetched using the syntax a[i, j] or 2-d slice as a[m:n, k:l]\n",
+    "\n",
+    "\n",
+    "The ellipsis (3 full stops `...`) is valid token by the python parser. In Numpy it is used as a shortcut when slicing arrays of many dimensions for example if x is a 4-d array x[i, ...] is a shortcut for x[i, :, :, :,]\n",
+    "\n",
+    "### Assigning to Slices\n",
+    "\n",
+    "Mutable sequnces can be grafted or modified in place using the slice notation. You can also `del` slices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +551,7 @@
        "[0, 1, 20, 30, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +572,7 @@
        "[0, 1, 20, 30, 5, 8, 9]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -567,9 +592,9 @@
      "evalue": "can only assign an iterable",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-da8b10461280>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-da8b10461280>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: can only assign an iterable"
      ]
     }
@@ -580,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +614,7 @@
        "[0, 1, 100, 8, 9]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,8 +625,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using + and * with Seqences\n",
+    "\n",
+    "concatenation is a common operation with any sequence but there are some subtle details as to how they work. When using the */+ both sequences have to be of the same time and none of them is modified, instead a new on is created"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +644,7 @@
        "'abcabcabc'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +665,7 @@
        "'abcdef'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,8 +675,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building Lists of Lists\n",
+    "\n",
+    "now this can bite you when you don't expect it to. Sometimes you want to init a new list with certain number of nested lists, the best way to do this is with list comprehension."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +694,7 @@
        "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +717,7 @@
        "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', 'X']]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +754,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here the outer list is made up of refferences of the inner list"
+    "Here the outer list is made up of refferences of the inner list. Here the issue is that the above code acts similar to this\n",
+    "```\n",
+    "row = ['_'] * 3\n",
+    "board = []\n",
+    "for i in range(3):\n",
+    "    board.append(row)\n",
+    "```\n",
+    "\n",
+    "The same row gets appended 3 times. On the other hand using list comprehension is similar to this code\n",
+    "\n",
+    "```\n",
+    "board = []\n",
+    "for i in range(3):\n",
+    "    row = ['_'] * 3\n",
+    "    board.append(row)\n",
+    "```\n",
+    "\n",
+    "### Augmented Assignment with Sequences\n"
    ]
   },
   {
