--- a/_notebooks/2021-07-19-ch2-array-of-sequences.ipynb
+++ b/_notebooks/2021-07-19-ch2-array-of-sequences.ipynb
@@ -771,14 +771,43 @@
     "    board.append(row)\n",
     "```\n",
     "\n",
-    "### Augmented Assignment with Sequences\n"
+    "### Augmented Assignment with Sequences\n",
+    "Using operators like *= += behaves very differently depending on the first operand. The special method that works is `__iadd__`(inplace addition). If it is not implemented, pythons falls back to `__add__`. If `__iadd__` is present and the sequence is mutable then the operation happens in place. If either of the conditions is false then pythons calls `__add__` and assigns the result to the object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3] 140649174697408\n",
+      "[1, 2, 3, 1, 2, 3] 140649174697408\n",
+      "(1, 2, 3) 140649174633216\n",
+      "(1, 2, 3, 1, 2, 3) 140649217792800\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3]\n",
+    "print(l, id(l))\n",
+    "l *= 2\n",
+    "print(l, id(l))\n",
+    "\n",
+    "t = (1, 2, 3)\n",
+    "print(t, id(t))\n",
+    "t *= 2\n",
+    "print(t, id(t))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sort and Sorted\n",
+    "## Sort and Sorted\n",
     "\n",
     "`list.sort()` sorts the list in place and returns a None object to signal this. Infact this is a common practice in Python standard lib to return None from functions that operate on objects in place.\n",
     "\n",
@@ -791,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +829,7 @@
        "['apple', 'banana', 'grape', 'raspberry']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +850,7 @@
        "['grape', 'raspberry', 'apple', 'banana']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +879,7 @@
        "['apple', 'banana', 'grape', 'raspberry']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,9 +892,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### bisect module\n",
+    "## Managing Ordered Sequences with bisect\n",
     "\n",
-    "bisect finds the insert point for an item in a list and returns the index, then we use `list.insert(index, item)` to add the item to the corresponding index."
+    "bisect finds the insert point for an item in a list and returns the index, then we use `list.insert(index, item)` to add the item to the corresponding index. the bisect module also has an efficient implementation of binary search which can be used. \n",
+    "\n",
+    "`bisect` offers 2 functions - `bisect` and `insort`"
    ]
   },
   {
