--- a/_notebooks/2021-07-19-ch2-array-of-sequences.ipynb
+++ b/_notebooks/2021-07-19-ch2-array-of-sequences.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +911,7 @@
     "HAYSTACK = [1, 4, 5, 6, 8, 12, 15, 20, 21, 23, 23, 26, 29, 30]\n",
     "NEEDLES = [0, 1, 2, 5, 8, 10, 22, 23, 29, 30, 31]\n",
     "\n",
-    "ROW_FMT = '{0:2d} @ {1:2d}         {2}{0:<2d}'\n",
+    "ROW_FMT = '{0:2d} @ {1:2d}    {2}{0:<2d}'\n",
     "\n",
     "def demo(bisect_fn):\n",
     "    for needle in reversed(NEEDLES):\n",
@@ -932,26 +932,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('DEMO: ', 'bisect')\n",
-      "('haystack ->', ' 1  4  5  6  8 12 15 20 21 23 23 26 29 30')\n",
-      "31 @ 14           |  |  |  |  |  |  |  |  |  |  |  |  |  |31\n",
-      "30 @ 14           |  |  |  |  |  |  |  |  |  |  |  |  |  |30\n",
-      "29 @ 13           |  |  |  |  |  |  |  |  |  |  |  |  |29\n",
-      "23 @ 11           |  |  |  |  |  |  |  |  |  |  |23\n",
-      "22 @  9           |  |  |  |  |  |  |  |  |22\n",
-      "10 @  5           |  |  |  |  |10\n",
-      " 8 @  5           |  |  |  |  |8 \n",
-      " 5 @  3           |  |  |5 \n",
-      " 2 @  1           |2 \n",
-      " 1 @  1           |1 \n",
-      " 0 @  0         0 \n"
+      "DEMO:  bisect_right\n",
+      "haystack ->  1  4  5  6  8 12 15 20 21 23 23 26 29 30\n",
+      "31 @ 14      |  |  |  |  |  |  |  |  |  |  |  |  |  |31\n",
+      "30 @ 14      |  |  |  |  |  |  |  |  |  |  |  |  |  |30\n",
+      "29 @ 13      |  |  |  |  |  |  |  |  |  |  |  |  |29\n",
+      "23 @ 11      |  |  |  |  |  |  |  |  |  |  |23\n",
+      "22 @  9      |  |  |  |  |  |  |  |  |22\n",
+      "10 @  5      |  |  |  |  |10\n",
+      " 8 @  5      |  |  |  |  |8 \n",
+      " 5 @  3      |  |  |5 \n",
+      " 2 @  1      |2 \n",
+      " 1 @  1      |1 \n",
+      " 0 @  0    0 \n"
      ]
     }
    ],
@@ -961,26 +961,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('DEMO: ', 'bisect_left')\n",
-      "('haystack ->', ' 1  4  5  6  8 12 15 20 21 23 23 26 29 30')\n",
-      "31 @ 14           |  |  |  |  |  |  |  |  |  |  |  |  |  |31\n",
-      "30 @ 13           |  |  |  |  |  |  |  |  |  |  |  |  |30\n",
-      "29 @ 12           |  |  |  |  |  |  |  |  |  |  |  |29\n",
-      "23 @  9           |  |  |  |  |  |  |  |  |23\n",
-      "22 @  9           |  |  |  |  |  |  |  |  |22\n",
-      "10 @  5           |  |  |  |  |10\n",
-      " 8 @  4           |  |  |  |8 \n",
-      " 5 @  2           |  |5 \n",
-      " 2 @  1           |2 \n",
-      " 1 @  0         1 \n",
-      " 0 @  0         0 \n"
+      "DEMO:  bisect_left\n",
+      "haystack ->  1  4  5  6  8 12 15 20 21 23 23 26 29 30\n",
+      "31 @ 14      |  |  |  |  |  |  |  |  |  |  |  |  |  |31\n",
+      "30 @ 13      |  |  |  |  |  |  |  |  |  |  |  |  |30\n",
+      "29 @ 12      |  |  |  |  |  |  |  |  |  |  |  |29\n",
+      "23 @  9      |  |  |  |  |  |  |  |  |23\n",
+      "22 @  9      |  |  |  |  |  |  |  |  |22\n",
+      "10 @  5      |  |  |  |  |10\n",
+      " 8 @  4      |  |  |  |8 \n",
+      " 5 @  2      |  |5 \n",
+      " 2 @  1      |2 \n",
+      " 1 @  0    1 \n",
+      " 0 @  0    0 \n"
      ]
     }
    ],
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1007,8 +1007,8 @@
      "output_type": "stream",
      "text": [
       "[1, 4, 5, 6, 8, 12, 15, 19, 20, 21, 23, 23, 26, 29, 30]\n",
-      "CPU times: user 819 µs, sys: 168 µs, total: 987 µs\n",
-      "Wall time: 823 µs\n"
+      "CPU times: user 2.41 ms, sys: 0 ns, total: 2.41 ms\n",
+      "Wall time: 1.51 ms\n"
      ]
     }
    ],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1030,8 +1030,8 @@
      "output_type": "stream",
      "text": [
       "[1, 4, 5, 6, 8, 12, 15, 19, 20, 21, 23, 23, 26, 29, 30]\n",
-      "CPU times: user 302 µs, sys: 0 ns, total: 302 µs\n",
-      "Wall time: 174 µs\n"
+      "CPU times: user 161 µs, sys: 30 µs, total: 191 µs\n",
+      "Wall time: 198 µs\n"
      ]
     }
    ],
@@ -1043,49 +1043,89 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 5 -> [5]\n",
+      " 8 -> [5, 8]\n",
+      " 3 -> [3, 5, 8]\n",
+      " 6 -> [3, 5, 6, 8]\n",
+      "13 -> [3, 5, 6, 8, 13]\n",
+      " 0 -> [0, 3, 5, 6, 8, 13]\n",
+      " 9 -> [0, 3, 5, 6, 8, 9, 13]\n"
+     ]
+    }
+   ],
    "source": [
-    "### Sequences other than lists\n",
+    "# isort is much faster for inserting into a sorted array\n",
     "\n",
-    "- if you need large list of floating points it's better to user arrays since the only store the numerical value and not float object, just like how C/C++ implements.\n",
+    "import bisect\n",
+    "import random\n",
     "\n",
-    "- if you need FIFO, LIFO operation consider the deque\n",
+    "SIZE = 7\n",
     "\n",
-    "- if you do frequent membership checks, a set is much more efficient."
+    "my_list = []\n",
+    "for i in range(SIZE):\n",
+    "    new_item = random.randrange(SIZE*2)\n",
+    "    bisect.insort(my_list, new_item)\n",
+    "    print('%2d ->'%new_item, my_list)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Arrays"
+    "## When a List is Not all the Answer\n",
+    "\n",
+    "when we are starting out we tend to overuse lists for everything. But there are times when other sequence objects make more sense. Let explore some of them.\n",
+    "\n",
+    "- if you need large list of floating points it's better to user `arrays` since the only store the numerical value and not float object, just like how C/C++ implements.\n",
+    "\n",
+    "- if you need FIFO, LIFO operation consider the `deque`\n",
+    "\n",
+    "- if you do frequent membership checks, a `set` is much more efficient (note they are not a sequence since they are not ordered)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arrays\n",
+    "\n",
+    "Array can be used to store same type of numeraical data and are as efficient as C-arrays. You can also provide a typecode (a letter) to determine the underlying C type used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# arrays are very effective for large sequnences with only numbers\n",
     "from array import array\n",
     "from random import random\n",
+    "\n",
+    "# create a array to hold decimal float\n",
     "floats = array('d', (random() for i in range(10**7)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6803039375481935"
+       "0.19034769013593422"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,16 +1148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6803039375481935"
+       "0.19034769013593422"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1182,7 @@
        "True"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,8 +1192,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we are creating a new int array using the old HAYSTACK"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1209,7 @@
        "[1, 4, 5, 6, 8, 12, 15, 20, 21, 23, 23, 26, 29, 30]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1229,7 @@
        "array('i', [30, 29, 26, 23, 23, 21, 20, 15, 12, 8, 6, 5, 4, 1])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,8 +1240,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Array doesn't have a built-in sort mechanism, you can create a new sorted array easily though."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1257,7 @@
        "array('i', [1, 4, 5, 6, 8, 12, 15, 20, 21, 23, 23, 26, 29, 30])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,10 +1268,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, None, array('i', [1, 4, 5, 6, 8, 8, 12, 15, 20, 21, 23, 23, 26, 29, 30]))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# but bisect and bisect.insort works of the back\n",
+    "\n",
+    "bisect.bisect(a, 8), bisect.insort(a, 8), a"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Memory Views\n",
+    "### Memory Views\n",
     "\n",
     "> A memoryview is essentially a generalized NumPy array structure in Python itself\n",
     "(without the math). It allows you to share memory between data-structures (things like\n",
